--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,7 +1,7 @@
 /* app shell CSS */
 :root {
-  --primary: #31a9e1;
-  --gray: #ececec;
+  --primary: purple;
+  --gray: #d3d3d3;
   --whitesmoke: #f5f5f5;
   --dark: #222;
   --monoaki: #272822;
